# supply-genie

./: .gitignore  AGENTS.md  README.md  distributed-migration-plan.md  package.json  progress-log.md
backend/: README.md  pyproject.toml  pyrightconfig.json  test_voice.py
backend/alembic/: env.py
backend/alembic/versions/: 1f1d3dc0a669_add_summary_column_to_voice_sessions.py  5e49f25106f9_initial_schema.py  f800e3bc70cb_add_voice_sessions_and_transcript_events.py
backend/app/: config.py  database.py  main.py  models.py  observability.py  resilience.py  schemas.py
backend/app/routers/: __init__.py  approvals.py  chat.py  connectors.py  health.py  incidents.py  kpis.py  orchestrator.py  voice.py
backend/app/services/: action_dispatcher.py  action_executor.py  call_summary.py  chat.py  incidents.py  kpi.py  orchestrator.py  safety.py  voice_command_bus.py  voice_pipeline.py  voice_prompts.py  voice_session.py  voice_state_store.py  voice_tools.py
backend/app/services/connectors/: audio_utils.py  email.py  labor_system.py  manager_notify.py  po_system.py  slack.py  twilio_voice.py
backend/app/services/workflows/: __init__.py  engine.py  queue_engine.py
backend/scripts/: burst_simulation.py  gemini_live_latency_probe.py  voice_latency_probe.py
backend/tests/: test_chat.py  test_kpis.py  test_regression.py  test_resilience.py  test_voice_commands.py  test_workflow_b.py  test_workflow_engine.py
deploy/k8s/: voice-sticky-routing.yaml
deploy/nginx/: voice-sticky-routing.conf
docs/operations/: failure-drill-checklist.md  (+3 more)
ui/: package.json  pnpm-lock.yaml
(+14 files in other folders)
